<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Toolbar

                android:id="@+id/navigation"
                android:navigationIcon="?attr/homeAsUpIndicator"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/perfectColor"
                >

            </Toolbar>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_cat"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:layout_margin="15dp"
                    android:textColor="@color/newspaper_chooser"

                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:background="@drawable/sport_card"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/spor_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="11dp"
                android:layout_marginBottom="7dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/cardview_default_elevation">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color"
                    >

                    <ImageView
                        android:id="@+id/spor_img"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_alignBottom="@+id/img"
                        android:src="@drawable/bottom_shadow"

                        android:foreground="@drawable/sporimg"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/sport"
                        android:includeFontPadding="true"
                        android:textAlignment="center"
                        android:textColor="@color/newspaper_chooser"
                        android:textSize="18dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />


                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/eco_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="11dp"
                android:layout_marginBottom="7dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/cardview_default_elevation">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color"
                    >

                    <ImageView
                        android:id="@+id/ekonomi_img"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_alignBottom="@+id/img"
                        android:src="@drawable/bottom_shadow"
                        android:foreground="@drawable/ecoimg"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/economy"
                        android:textAlignment="center"
                        android:textColor="@color/newspaper_chooser"
                        android:textSize="18dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        />


                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/science_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="11dp"
                android:layout_marginBottom="7dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/cardview_default_elevation">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color">

                    <ImageView
                        android:id="@+id/science_img"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_alignBottom="@+id/img"
                        android:src="@drawable/bottom_shadow"
                        android:foreground="@drawable/scienceimg"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/science"
                        android:textAlignment="center"
                        android:textColor="@color/newspaper_chooser"
                        android:textSize="18dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />


                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/tech_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="11dp"
                android:layout_marginBottom="7dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/cardview_default_elevation">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color">

                    <ImageView
                        android:id="@+id/tekno_img"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_alignBottom="@+id/img"
                        android:src="@drawable/bottom_shadow"
                        android:foreground="@drawable/techimg"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/technology"
                        android:textAlignment="center"
                        android:textColor="@color/newspaper_chooser"
                        android:textSize="18dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />


                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/health_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="11dp"
                android:layout_marginBottom="7dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="@dimen/cardview_default_elevation">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color">

                    <ImageView
                        android:id="@+id/health_card_img"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_alignBottom="@+id/img"
                        android:src="@drawable/bottom_shadow"
                        android:foreground="@drawable/healthimg"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/health"
                        android:textAlignment="center"
                        android:textColor="@color/newspaper_chooser"
                        android:textSize="18dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />


                </RelativeLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>